--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 .products {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    
     gap: 20px;
 }
 
@@ -19,7 +20,7 @@
 
 .product-image {
     width: 100%;
-    height: 300px;
+    max-height: 300px;
     background-size: cover;
     background-position: center;
     margin-bottom: 10px;
