--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-/* Stil for produkter */
+/* Style for products */
 
 .products {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    
     gap: 20px;
 }
 
@@ -27,7 +26,7 @@
     object-fit: contain;
 }
 
-/*stil for produkt detalj siden */
+/*style for product detail page */
 
 .product-details {
     max-width: 600px;
